<resources>
    <string name="app_name">KKTechnixPharmacy</string>
    <string name="product_description">Product Description</string>
    <string name="price">₹%1$d</string>
    <string name="time_and_distance">%1$d min | %2$d km</string>
    <string name="all">All</string>
    <string name="ongoing">Ongoing</string>
    <string name="delivered">Delivered</string>
    <string name="waiting_for_payment">Waiting for Payment</string>
    <string name="failed">Failed</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="address">Address</string>
    <string name="price_details">Price Details</string>
    <string name="mrp">MRP</string>
    <string name="discount">Discount</string>
    <string name="Shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="proceed">Proceed</string>
    <string name="delivery_method_free">FREE Delivery\nStandard shipping, 5–7 business days</string>
    <string name="delivery_method_paid">₹%1$d\nStandard shipping, 1–3 business days</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_method_upi">UPI (Phonepe, Gpay, Paytm &amp; more)</string>
    <string name="payment_method_card">Credit / Debit / ATM Card</string>
    <string name="payment_method_net_banking">Net Banking</string>
    <string name="payment_method_cod">Cash on Delivery</string>
    <string name="add_or_change_address">Add or Change Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="payment_page">Payment Page Scroll View</string>
    <string name="total_payment">Total Payment (₹)</string>
    <string name="search_hint">Name of medicine or store</string>
    <string name="select_location">Select a location</string>
    <string name="use_current_location">Use current location</string>
    <string name="pinned_locations">Pinned Locations</string>
    <string name="categories">Categories</string>
    <string name="category_antibiotic">Antibiotic</string>
    <string name="category_ayurveda">Ayurveda</string>
    <string name="category_hygiene">Hygiene</string>
    <string name="past_searches">Past Searches</string>
    <string name="search_results">Search Results</string>


    <string name="my_orders">MyOrders</string>
    <string name="my_prescription">My Prescription</string>
    <string name="cash_wallet">Cash Wallet</string>
    <string name="my_addresses">My Addresses</string>
    <string name="premium">Premium</string>
    <string name="favourite_seller">Favourite Seller</string>
    <string name="consultancy">Consultancy</string>
    <string name="help_and_support">Help and Support</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="log_out">Log Out</string>


    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>

    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_skip">Skip</string>

    <string name="get_medicine">Get your medicine instantly</string>
    <string name="get_medicine_desc">Order your medicine online from us and get it delivered instantly to your home.</string>

    <string name="pill_reminder">Pill reminders</string>
    <string name="pill_reminder_desc">Don’t be afraid about forgetting the right intake of your medicine. This app will remind you on time.</string>

    <string name="upload_prescription">Upload your prescription</string>
    <string name="upload_prescription_desc">Upload and confirm the medicine’s name, They’ll be automatically added to the cart.</string>

</resources>